Handling of margin/padding changes for different scenarios, expand the sample project

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="neutral">Neutral Button</string>
     <string name="callbacks">Callbacks</string>
     <string name="list">Basic List</string>
+    <string name="list_buttons">Basic List + Buttons</string>
     <string name="singleChoice">Single Choice</string>
     <string name="multiChoice">Multiple Choice</string>
     <string name="customView">Custom View</string>
@@ -43,6 +44,7 @@
     <string name="basic_notitle">Basic (No Title)</string>
     <string name="shareLocationPrompt">This app wants to access your location.</string>
     <string name="basic_list_long">Basic List (Long)</string>
+    <string name="basic_list_long_buttons">Basic List (Long) + Buttons</string>
     <string name="states">States</string>
     <string name="custom_listitem_button">A button!</string>
     <string name="custom_adapter">Custom Adapter</string>
@@ -50,6 +52,7 @@
     <string name="basic_longContent">Basic (Long Content)</string>
     <string name="basic_icon">Basic (Icon)</string>
     <string name="basic_list_notitle">Basic List (No Title)</string>
+    <string name="basic_list_notitle_buttons">Basic List (No Title) + Buttons</string>
     <string name="folder_chooser">Folder Chooser</string>
     <string name="showCancelDismissCallbacks">Show/Cancel/Dismiss Callbacks</string>
     <string name="changelog">Changelog</string>
@@ -59,79 +62,6 @@
     <string name="color_chooser_accent">Color Chooser (Accent)</string>
     <string name="ssid">SSID</string>
     <string name="ssidLit">Material Dialogs</string>
-
-    <string-array name="socialNetworks">
-        <item>Twitter</item>
-        <item>Google+</item>
-        <item>Instagram</item>
-        <item>Facebook</item>
-    </string-array>
-
-    <string-array name="socialNetworks_longItems">
-        <item>Twitter is an online social networking service that enables users to send and read short 140-character messages called "tweets".</item>
-        <item>Google+ is an interest-based social network that is owned and operated by Google Inc. The service is Google\'s fourth foray into social networking.</item>
-        <item>Instagram is an online mobile photo-sharing, video-sharing and social networking service that enables its users to take pictures and videos, and share them on a variety of social networking platforms.</item>
-        <item>Facebook is an online social networking service headquartered in Menlo Park, California. Its website was launched on February 4, 2004, by Mark Zuckerberg with friends.</item>
-    </string-array>
-
-    <string-array name="states">
-        <item>Alabama</item>
-        <item>Alaska</item>
-        <item>American Samoa</item>
-        <item>Arizona</item>
-        <item>Arkansas</item>
-        <item>California</item>
-        <item>Colorado</item>
-        <item>Connecticut</item>
-        <item>Delaware</item>
-        <item>District of Columbia</item>
-        <item>Florida</item>
-        <item>Georgia</item>
-        <item>Guam</item>
-        <item>Hawaii</item>
-        <item>Idaho</item>
-        <item>Illinois</item>
-        <item>Indiana</item>
-        <item>Iowa</item>
-        <item>Kansas</item>
-        <item>Kentucky</item>
-        <item>Louisiana</item>
-        <item>Maine</item>
-        <item>Maryland</item>
-        <item>Massachusetts</item>
-        <item>Michigan</item>
-        <item>Minnesota</item>
-        <item>Mississippi</item>
-        <item>Missouri</item>
-        <item>Montana</item>
-        <item>Nebraska</item>
-        <item>Nevada</item>
-        <item>New Hampshire</item>
-        <item>New Jersey</item>
-        <item>New Mexico</item>
-        <item>New York</item>
-        <item>North Carolina</item>
-        <item>North Dakota</item>
-        <item>Northern Marianas Islands</item>
-        <item>Ohio</item>
-        <item>Oklahoma</item>
-        <item>Oregon</item>
-        <item>Pennsylvania</item>
-        <item>Puerto Rico</item>
-        <item>Rhode Island</item>
-        <item>South Carolina</item>
-        <item>South Dakota</item>
-        <item>Tennessee</item>
-        <item>Texas</item>
-        <item>Utah</item>
-        <item>Vermont</item>
-        <item>Virginia</item>
-        <item>Virgin Islands</item>
-        <item>Washington</item>
-        <item>West Virginia</item>
-        <item>Wisconsin</item>
-        <item>Wyoming</item>
-    </string-array>
 
     <string name="preference_dialogs">Preference Dialogs</string>
     <string name="list_pref_title">List Preference</string>
@@ -185,6 +115,7 @@
     <string name="choice_lists">Choice Lists</string>
     <string name="advanced_lists">Advanced Lists</string>
     <string name="list_longItems">Basic List (Long Items)</string>
+    <string name="list_longItems_buttons">Basic List (Long Items) + Buttons</string>
     <string name="multiChoice_disabledItems">Multiple Choice (Disabled Items)</string>
     <string name="singleChoice_longItems">Single Choice (Long Items)</string>
     <string name="multiChoice_longItems">Multiple Choice (Long Items)</string>
@@ -196,6 +127,7 @@
     <string name="permissionSample"><![CDATA[Allow <b>%1$s</b> to show you a sample of a checkbox prompt?]]></string>
     <string name="date_picker">Date Picker</string>
     <string name="list_checkPrompt">Basic List (CheckBox Prompt)</string>
+    <string name="list_checkPrompt_buttons">Basic List (CheckBox Prompt) + Buttons</string>
     <string name="input_checkPrompt">Input (CheckBox Prompt)</string>
     <string name="example_prompt">Example check prompt</string>
     <string name="list_longPress">Basic List (Long Press)</string>
