Icon dialogs, single choice dialogs

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
   <string name="disagree">Disagree</string>
   <string name="more_info">More Info</string>
 
+  <string name="choose">Choose</string>
+
   <string name="shareLocationPrompt">This app wants to access your location.</string>
   <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
   <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
